tests/tooling/fixtures/native/recovery/positive/message_send_nonzero_global_identifier_post_pure_prototype_call_fast_path.objc3
module MessageSendNonzeroGlobalIdentifierPostPurePrototypeCallFastPath;

let receiver = 7;

pure fn touch() -> i32;

fn main() -> i32 {
  touch();
  return [receiver ping];
}
