tests/tooling/fixtures/native/recovery/negative/negative_pure_definition_impure_global_write.objc3
// Negative fixture: pure definitions reject writes to mutable global state.
// Expected diagnostic code(s): O3S215.
module NegativePureDefinitionImpureGlobalWrite;

let counter = 0;

pure fn touch() -> i32 {
  counter = counter + 1;
  return counter;
}

fn main() -> i32 {
  return touch();
}
